# long-batch

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-cicd.yml
domain/: __init__.py  __main__.py  config.py  extractors.py  models.py  storage.py  sync_national_law_db.py  text.py
domain/clients/: __init__.py  national_law_db.py
ops/: crontab.example
shell/: check_national_law_db.sh  sync_due_national_law_db.sh  sync_national_law_db.sh  update_national_law_db.sh
