[project]
name = "long-batch"
version = "0.1.0"
description = "Batch jobs for synchronizing legislation data into a local corpus."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "pypdf>=4.3.1",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2",
]

[project.scripts]
sync-national-law-db = "domain.sync_national_law_db:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
